[package]
name = "stableroute-contracts"
version = "0.1.0"
edition = "2021"
description = "StableRoute Soroban smart contracts for Stellar liquidity routing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.3"

[dev-dependencies]
soroban-sdk = { version = "25.3", features = ["testutils"] }
# Property-based testing harness for fee-math invariants (#24). Pinned to
# the 1.x line; the test config uses a fixed case count for deterministic CI.
proptest = "~1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
